Update Feature Customer and Edit Code
